--- a/bower.json
+++ b/bower.json
@@ -2,23 +2,26 @@
   "name": "trovelists",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.4.0",
+    "angular": "1.4.0",
     "bootstrap": "^3.2.0",
-    "angular-animate": "^1.4.0",
-    "angular-cookies": "^1.4.0",
-    "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0",
-    "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0",
+    "angular-animate": "1.4.0",
+    "angular-cookies": "1.4.0",
+    "angular-resource": "1.4.0",
+    "angular-route": "1.4.0",
+    "angular-sanitize": "1.4.0",
+    "angular-touch": "1.4.0",
     "angular-fontawesome": "~1.0.0",
     "angular-truncate": "*",
     "ngInfiniteScroll": "~1.2.1",
     "angular-masonry-directive": "*",
     "masonry": "~3.3.2",
-    "imagesloaded": "~4.0.0"
+    "imagesloaded": "~4.0.0",
+    "angular-slick":"*",
+    "slick-carousel":"*",
+    "ng-dialog":"*"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "1.4.0"
   },
   "appPath": "app",
   "moduleName": "trovelistsApp",
