--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,7 @@
     "ngInfiniteScroll": "~1.2.1",
     "angular-masonry-directive": "*",
     "masonry": "~3.3.2",
-    "imagesloaded": "~4.0.0",
-    "angular-slick":"*",
-    "slick-carousel":"*",
-    "ng-dialog":"*"
+    "imagesloaded": "~4.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.4.0"
